fixed wording on collapse bar

--- a/public/purecss/menus.css
+++ b/public/purecss/menus.css
@@ -209,8 +209,8 @@ https://github.com/yui/pure/blob/master/LICENSE.md
 /* HEADINGS */
 .pure-menu .pure-menu-heading {
     color: #565d64;
-    text-transform: uppercase;
-    font-size: 90%;
+    /*text-transform: uppercase;*/
+    font-size: 100%;
     margin-top: 0.5em;
     border-bottom-width: 1px;
     border-bottom-style: solid;
